tests/invalid/List_Invalid_1.whiley
import * from whiley.lang.*

method main(System.Console sys) => void:
    x = 1
    a2[0] = x
